2005-05-13  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/common/serial.c (serial_init): Fix compiler warnings about
	formats strings for diag_printf.	

2004-11-30  Jani Monoses <jani@iv.ro>

	 * cdl/io_serial.cdl : CYGPKG_IO_SERIAL_SELECT_SUPPORT requires 
	 CYGFUN_IO_FILEIO_SELECT specifically not just CYGPKG_FILEIO. The 
	 latter provides select support only in kernel configurations.
	 
2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/io_serial.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2004-01-12  Dan Jakubiec <djakubiec@yahoo.com>

	* src/common/serial.c: serial_write() was returning an incorrect
	result code in non-blocking mode when output was blocked.  The
	previous code would return ENOERR with 0 bytes written.  This
	was fixed to return EAGAIN.

2003-08-18  Jay Foster <jay@systech.com>

	* src/common/serial.c: Fixed bug for XON/XOFF flow control that
	would cause multiple XON (or XOFF) characters to be sent for a
	single flow control state transition.
	Fixed bug in serial_write() that would cause output data to be
	discarded if using polled mode with flow control, and output
	was blocked due to flow control.
	Fixed bug in serial_data_xmt_req() that would not stop sending
	data when output was flow controlled off (hardware flow control).

2003-09-02  Eric Doenges <Eric.Doenges@DynaPel.com>

	* src/common/tty.c: Make tty_select prototype match implementation.
	* src/common/termiostty.c: Make termios_select prototype match 
	implementation.

2003-09-02  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/serial.c: Make serial_select prototype match
	implementation.

2003-06-09  Nick Garnett  <nickg@balti.calivar.com>

	* src/common/serial.c: Changed all calls to cyg_drv_cond_signal()
	to cyg_drv_cond_broadcast(). Removed comment asking whether this
	matters: it does.

	* include/serialio.h: Added includes of pkgconf files so that the
	ifdefs in this file work properly.
	